Fixed wrapping
git-svn-id: http://primefaces.googlecode.com/svn/prime-ui/trunk@8330 5a70e874-a5cb-11dd-8af2-493fb0bb9f7c

--- a/src/main/webapp/prime-ui/css/fieldset/fieldset.css
+++ b/src/main/webapp/prime-ui/css/fieldset/fieldset.css
@@ -5,6 +5,7 @@
 .pui-fieldset-toggleable .pui-fieldset-legend {
     padding: 0.5em 1em 0.5em 0.5em;
     cursor:pointer;
+    white-space: nowrap;
 }
 
 .pui-fieldset .pui-fieldset-toggler {
